0.27  2011-03-06

- Really added support for ssl database connections, including a --db-ssl
  parameter to the Build.PL.

- All foreign key columns in the schema are now indexed.

- The previous release appeared to have some bad mock data for the
  schema. This release should fix that.


0.26  2010-11-30

- Removed a bogus prereq on Apache2::ServerUtil.


0.25  2010-11-30

- Added a purge user feature. This will remove a user as well as everything
  they've ever contributed to the wiki, including pages, page revisions, and
  files. This is intended to make it trivially easy to remove "contributions"
  from spammers.

- Deleting all of a page's revisions now deletes the page.


0.24  2010-10-31

- Added missing test prereq for Test::Differences.

- Pages with many links to other pages ended up doing a lot of SQL queries
  (one per link). This has been refactored so that the pages for all links are
  fetched in one query, which should speed up HTML generation for pages with
  many links.

- External links in wikis which only allow members to post no longer include a
  rel="nofollow" attribute, since these wikis are presumably secure from spam.


0.23  2010-09-28

- Whenever Silki generate URIs for email or redirects, it now makes sure to
  use the domain of the current request, rather than the default domain.


0.22  2010-09-28

- Added a config option, mod_rewrite_hack, to work around brain damage in
  Apache's mod_rewrite. Turn this on if some pages cannot be resolved when
  running with Apache+mod_rewrite as a frontend proxy.


0.21  2010-09-28

- Fixed the spam checking so it displays a useful error message to the
  submitter.

- Allow a wiki admin to skip spam checking when submitting a page.

- Improved formatting of preformatted text in a page.

- All external links now include a rel="nofollow" attribute to discourage
  spam.

- Make sure the temp dir exists before trying to use it.


0.20  2010-09-17

- Added a "forgot my password" feature.
