@@ -140,6 +140,7 @@ perl                                           = 5.10.0
 [Prereqs / TestRequires]
 MIME::Base64      = 0
 Test::Differences = 0
+Test::Fatal       = 0
 Test::More        = 0.88
 Test::Most        = 0
 Test::Requires    = 0
